      that we have ever seen a Unix-alike system with cairo but not X11.)
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{fisher.test()} had a buglet: If arguments were
      factors with unused levels, levels were dropped and you'd get an
      error saying that there should be at least two levels,
      inconsistently with pre-tabulated data (Reported by Michael Fay).
    }
  }
}

\section{CHANGES IN R VERSION 2.13.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{iconv()} no longer translates \code{NA} strings as
      \code{"NA"}.
      
      \item \code{persp(box = TRUE)} now warns if the surface extends
      outside the box (since occlusion for the box and axes is computed
      assuming the box is a bounding box). (\PR{202}.)
      
      \item \code{RShowDoc()} can now display the licences shipped with
      \R, e.g. \code{RShowDoc("GPL-3")}.

      \item New wrapper function \code{showNonASCIIfile()} in package
      \pkg{tools}.

      \item \code{nobs()} now has a \code{"mle"} method in package
      \pkg{stats4}.

      \item \code{trace()} now deals correctly with S4 reference classes
      and corresponding reference methods (e.g., \code{$trace()})%$
      have been added.

      \item \command{xz} has been updated to 5.0.2 (very minor bugfix
      release).

      \item \code{tools::compactPDF()} gets more compression (usually a
      little, sometimes a lot) by using the compressed object streams of
      PDF 1.5.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Building the vignette PDFs in packages \pkg{grid} and
      \pkg{utils} is now part of running \command{make} from an SVN
      checkout on a Unix-alike: a separate \command{make vignettes} step
      is no longer required.

      These vignettes are now made with \code{keep.source = TRUE} and
      hence will be laid out differently.

      \item \command{make install-strip} failed under some configuration
      options.
    }