@@ -1,6 +1,6 @@
 % File src/library/base/man/Sys.localeconv.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2009 R Core Development Team
+% Copyright 1995-2011 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{Sys.localeconv}
@@ -16,14 +16,11 @@
 Sys.localeconv()
 }
 \details{
-  These settings are usually controlled by the environment variables
-  \env{LC_NUMERIC} and \env{LC_MONETARY} and if not set the values of
-  \env{LC_ALL} or \env{LANG}.
-
   Normally \R is run without looking at the value of \env{LC_NUMERIC},
   so the decimal point remains '\code{.}'.  So the first three of these
-  components will not be useful unless you have set \env{LC_NUMERIC} in
-  the current \R session.
+  components will only be useful if you have set the locale category
+  \code{LC_NUMERIC} using \code{Sys.setlocale} in the current \R session
+  (when \R may not work correctly).
 }
 \value{
   A character vector with 18 named components.  See your ISO C
