@@ -247,6 +247,9 @@
       factors with unused levels, levels were dropped and you'd get an
       error saying that there should be at least two levels,
       inconsistently with pre-tabulated data (Reported by Michael Fay).
+      
+      \item The locale category \samp{LC_MONETARY} was only been set on
+      Windows: it is now set on Unix-alikes where supported.
     }
   }
 }
